--- a/index.html
+++ b/index.html
@@ -71,6 +71,34 @@
                 <div class="date-venue"><b>09/06/2024</b> • Implexus Gym, Leeds</div>
             </div>
         </div>
+
+        <div class="calendar-item yne-border"> <!-- Add the .yne-border class directly to the calendar item -->
+            <div class="calendar-background"></div>
+            <div class="calendar-content">
+                <div class="calendar-date">Entries open: 08/06/2024</div>
+                <div class="competition-name">YNE Novice</div>
+                <div class="date-venue"><b>03-04/08/2024</b> • Riccall Regen Centre, York</div>
+            </div>
+        </div>
+
+        <div class="calendar-item yne-border"> <!-- Add the .yne-border class directly to the calendar item -->
+            <div class="calendar-background"></div>
+            <div class="calendar-content">
+                <div class="calendar-date">Entries open: TBA</div>
+                <div class="competition-name">YNE Masters & Bench Championships</div>
+                <div class="date-venue"><b>September, TBA</b> • TBA</div>
+            </div>
+        </div>
+
+        <div class="calendar-item yne-border"> <!-- Add the .yne-border class directly to the calendar item -->
+            <div class="calendar-background"></div>
+            <div class="calendar-content">
+                <div class="calendar-date">Entries open: 07/09/2024</div>
+                <div class="competition-name">YNE November Open</div>
+                <div class="date-venue"><b>02-03/11/2024</b> • Riccall Regen Centre, York</div>
+            </div>
+        </div>
+
         <!-- Repeat for other calendar items -->
     </div>
 </body>
