--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="calendar-item yne-border"> <!-- Add the .yne-border class directly to the calendar item -->
             <div class="calendar-background"></div>
             <div class="calendar-content">
-                <div class="calendar-date">Entries open: TBA</div>
+                <div class="calendar-date">Entries open: July, 2024</div>
                 <div class="competition-name">YNE Masters & Bench Championships</div>
                 <div class="date-venue"><b>September, TBA</b> • TBA</div>
             </div>
@@ -96,6 +96,15 @@
                 <div class="calendar-date">Entries open: 07/09/2024</div>
                 <div class="competition-name">YNE November Open</div>
                 <div class="date-venue"><b>02-03/11/2024</b> • Riccall Regen Centre, York</div>
+            </div>
+        </div>
+
+        <div class="calendar-item yne-border"> <!-- Add the .yne-border class directly to the calendar item -->
+            <div class="calendar-background"></div>
+            <div class="calendar-content">
+                <div class="calendar-date">Entries open: November, 2024</div>
+                <div class="competition-name">YNE January Open</div>
+                <div class="date-venue"><b>TBA</b> • TBA</div>
             </div>
         </div>
 
