--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+
     <title>YNEPF 2024 Calendar</title>
 </head>
 <body>
+
+    <h1 class="page-heading">2024 <span class="outlined-text">CALENDAR</span></h1>
     <div class="calendar-grid">
         <div class="calendar-item afk-border">
             <div class="calendar-background"></div>
@@ -110,5 +113,8 @@
 
         <!-- Repeat for other calendar items -->
     </div>
+    <p class="additional-text">All entries open at 9am, eight weeks before competition.</p>
+    <p class="additional-text">All competitions are sanctioned by the Yorkshire and North East Powerlifting Federation and will therefore be compliant with the IPF Technical Rules and Approved Kit list. Qualifying totals for national championships may be achieved at all sanctioned competitions.</p>
+</body>
 </body>
 </html>
