--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1 class="page-heading">2024 <span class="outlined-text">CALENDAR</span></h1>
+    <img src="img/2024calendar.svg" alt="2024 Calendar">
     <div class="calendar-grid">
         <div class="calendar-item afk-border">
             <div class="calendar-background"></div>
