--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>YNEPF 2024 Calendar</title>
 </head>
 <body>
-
+    <div class="header-caption">
+        <p>Y N E P F</p>
+    </div>
     <img src="img/2024calendar.svg" alt="2024 Calendar">
+    <div class="additional-text"> 
+        Provisional and may be subject to change
+    </div>
     <div class="calendar-grid">
         <div class="calendar-item afk-border">
             <div class="calendar-background"></div>
