--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="calendar-item afk-border">
             <div class="calendar-background"></div>
             <div class="calendar-content">
-                <div class="calendar-date">Entries open: 18.11.2023 • This is an accessible competition</div>
+                <div class="calendar-date">Entries open: 18.11.2023 • Accessible competition</div>
                 <div class="competition-name">YNE Quiet Series</div>
                 <div class="date-venue"><b>17.01.2024</b> • AFK Strength Gym, Sheffield</div>
             </div>
