--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
     <title>YNEPF 2024 Calendar</title>
 </head>
 <body>
-    <div class="header-caption">
-        <p>Y N E P F</p>
-    </div>
-    <img src="img/2024calendar.svg" alt="2024 Calendar">
-    <div class="additional-text"> 
-        Provisional and may be subject to change
-    </div>
+    <div class="header-wrapper">
+        <div class="fed-logo">
+            <img src="img/bp.svg" alt="British Powerlifting logo">
+        </div>
+        <div class="logo-lockup">
+            <div class="header-caption">
+                <p>Y N E P F</p>
+            </div>
+            <img src="img/2024calendar.svg" alt="2024 Calendar">
+            <div class="additional-text"> 
+                Provisional and may be subject to change
+            </div>
+        </div>
+        <div class="fed-logo">
+            <img src="img/yne.svg" alt="YNEPF logo">
+        </div>
+        </div>
     <div class="calendar-grid">
         <div class="calendar-item afk-border">
             <div class="calendar-background"></div>
