--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
             </div>
         </div>
 
+        <!-- Example: Apply a custom border color to a specific calendar item -->
+        <div class="calendar-item yne-border"> <!-- Add the .yne-border class directly to the calendar item -->
+            <div class="calendar-background"></div>
+            <div class="calendar-content">
+                <div class="calendar-date">Entries open: 16/12/2023</div>
+                <div class="competition-name">YNE February Open</div>
+                <div class="date-venue"><b>10.02.2024</b> • Hirst Welfare Centre, Ashington</div>
+            </div>
+        </div>
+
         <div class="calendar-item yne-border"> <!-- Add the .yne-border class directly to the calendar item -->
             <div class="calendar-background"></div>
             <div class="calendar-content">
